/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.0/userguide/java_library_plugin.html
 */

plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '2.4.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'io.freefair.lombok' version '5.3.0'
	id 'signing'
	id 'maven-publish'
}

group = 'com.siliconmtn'
version = '1.0.1-SNAPSHOT'
sourceCompatibility = '11'
archivesBaseName = "spacelibs-java"

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

dependencies {
    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    // implementation 'com.google.guava:guava:28.0-jre'
    //implementation 'org.apache.commons:commons-lang3:3.11'
    // implementation 'org.apache.commons:commons-io:1.3.2'
    implementation 'commons-beanutils:commons-beanutils-core:1.8.3'
    implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.16'
	implementation 'org.mockito:mockito-core:3.7.0'
	implementation 'org.mockito:mockito-inline:3.7.0'
	implementation 'org.apache.logging.log4j:log4j-api:2.14.0'
	implementation 'org.apache.logging.log4j:log4j-core:2.14.0'
	implementation 'org.apache.poi:poi:5.0.0'
	implementation 'org.apache.poi:poi-ooxml:5.0.0'
	
	// Spring Boot (Starters -> https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#using-boot-starter)
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.hibernate:hibernate-validator:7.0.1.Final'
	
	// XSS content validation/filtering
	implementation 'org.owasp.esapi:esapi:2.2.2.0'
	implementation 'org.jsoup:jsoup:1.13.1'
	implementation 'com.auth0:java-jwt:3.14.0'
	
    // Testing
	testImplementation('org.springframework.boot:spring-boot-starter-test'){
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.security:spring-security-test'

}

// Prevent Spring Boot from looking for a main()
bootJar {
	enabled = false
}
jar {
	enabled = true
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
    useJUnitPlatform()
}

jacocoTestReport {
	reports {
        xml.enabled true
        csv.enabled false
        html.enabled true
	}
	dependsOn test
}

javadoc {
	options.tags = ["updates", "updates:"]
}

java {
    withJavadocJar()
    withSourcesJar()
}

publishing {
	publications {
		spaceLibsJava(MavenPublication) {
			artifactId = 'spacelibs-java'
      		from components.java
      		versionMapping {
      			usage('java-api') {
      				fromResolutionOf('runtimeClasspath')
		        }
		        usage('java-runtime') {
		        	fromResolutionResult()
		        }
		    }
			pom {
				name = "spacelibs-java"
			    description = "A libary of useful tools and helper objects."
			    url = "https://github.com/smtadmin/spacelibs-java"
			    licenses {
			    	license {
			        	name = "MIT License"
			            url = "https://opensource.org/licenses/mit-license.php"
			        }
			    }
			    developers {
			    	developer {
			        	id = "etewa"
			        	name = "James Camire"
			        	email = "james@siliconmtn.com"
			        	organization = "Silicon Mountain Technologies, Inc."
			        	organizationUrl = "https://www.siliconmtn.com"
			        }
			    }
			    scm {
			    	connection = "scm:git:git://github.com/smtadmin/spacelibs-java.git"
			    	developerConnection = "scm:git:ssh://github.com:smtadmin/spacelibs-java.git"
			    	url = "https://github.com/smtadmin/spacelibs-java/tree/main"
			    }
			}
		}
	}
	repositories {
		if (project.version.endsWith("-SNAPSHOT")){
			maven {
				credentials {
					username project.ossrhUsername
					password project.ossrhPassword
				}
            	url = "https://oss.sonatype.org/content/repositories/snapshots/"
            }
        }
        else {
        	maven {
        		url = "$buildDir/repos/releases"
        	}
        }
    }
}

signing {
    sign publishing.publications.spaceLibsJava
}
